// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadOtherId initially renders the page without any filecards 1`] = `
<QuestionPage
  formState={Object {}}
  nextPage="/claims/ssn?claim_id=12345"
  onSave={[Function]}
  title="Verify your identity"
>
  <Heading
    level="2"
    size="1"
  >
    Upload an identification document
  </Heading>
  <Lead>
    Upload one of the following:
  </Lead>
  <ul
    className="usa-list"
  >
    <li
      key="0"
    >
      Document 1
    </li>
    <li
      key="1"
    >
      Document 2, or
    </li>
    <li
      key="2"
    >
      Document 3
    </li>
  </ul>
  <FileUploadDetails />
  <FileCardList
    addAnotherFileButtonText="Choose another file"
    addFirstFileButtonText="Choose a file"
    fileHeadingPrefix="File"
    files={Array []}
    setAppErrors={[MockFunction]}
    setFiles={[Function]}
  />
</QuestionPage>
`;

exports[`UploadOtherId when the user uploads files renders filecards for the files 1`] = `
<QuestionPage
  formState={Object {}}
  nextPage="/claims/ssn?claim_id=12345"
  onSave={[Function]}
  title="Verify your identity"
>
  <Heading
    level="2"
    size="1"
  >
    Upload an identification document
  </Heading>
  <Lead>
    Upload one of the following:
  </Lead>
  <ul
    className="usa-list"
  >
    <li
      key="0"
    >
      Document 1
    </li>
    <li
      key="1"
    >
      Document 2, or
    </li>
    <li
      key="2"
    >
      Document 3
    </li>
  </ul>
  <FileUploadDetails />
  <FileCardList
    addAnotherFileButtonText="Choose another file"
    addFirstFileButtonText="Choose a file"
    fileHeadingPrefix="File"
    files={
      Array [
        Object {
          "file": File {},
          "id": "File1",
        },
        Object {
          "file": File {},
          "id": "File2",
        },
        Object {
          "file": File {},
          "id": "File3",
        },
      ]
    }
    setAppErrors={
      [MockFunction] {
        "calls": Array [
          Array [
            null,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    setFiles={[Function]}
  />
</QuestionPage>
`;
